added sales saving in jupyter notebook

--- a/AppNotebook.ipynb
+++ b/AppNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1a171b0b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f295e90",
    "metadata": {},
    "outputs": [],
@@ -69,6 +69,16 @@
     "        for item in self.records:\n",
     "            if item[\"id\"] == order[\"id\"]:\n",
     "                item[\"qty\"] = item[\"qty\"] - order[\"qty\"]\n",
+    "                fh = open(\"sales.json\", \"r\")\n",
+    "                sales = json.loads(fh.read())\n",
+    "                fh.close()\n",
+    "                sale = order.copy()\n",
+    "                sale[\"bill-amount\"] = order[\"qty\"] * order[\"price\"]\n",
+    "                sale[\"date-time\"] = time.ctime()\n",
+    "                sales.append(sale)\n",
+    "                fh = open(\"sales.json\", \"w\")\n",
+    "                fh.write(json.dumps(sales, indent=4))\n",
+    "                fh.close()\n",
     "                return True\n",
     "        return False\n",
     "\n",
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "6de91caf",
    "metadata": {},
    "outputs": [],
@@ -140,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "6348607e",
    "metadata": {
     "scrolled": false
@@ -166,154 +176,7 @@
       "Enter id: 50275\n",
       "Enter quantity: 10\n",
       "\n",
-      "Oops, sorry out of stock!!!\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 1\n",
-      "\n",
-      "Enter id: 50276\n",
-      "Enter quantity: 10\n",
-      "\n",
-      "        ***************************************************\n",
-      "        Bill No.\ttemp\n",
-      "        Item Id:\t50276\n",
-      "        Name:\tApple macbook air\n",
-      "        Price:\t2860\n",
-      "\n",
-      "        Requested Quantity:\t10\n",
-      "        ---------------------------------------------------\n",
-      "        Total Amount:\tRs. 28600\n",
-      "        ***************************************************\n",
-      "        \n",
-      "\n",
-      "Order successfull\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 1\n",
-      "\n",
-      "Enter id: 50276\n",
-      "Enter quantity: 564654\n",
-      "\n",
-      "            Requested items: 564654\n",
-      "            Items in stock: 190\n",
-      "            \n",
-      "Do you want to buy remaining 190 items ? (Y or N): \n",
-      "N\n",
-      "\n",
-      "OK order cancelled\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 1\n",
-      "\n",
-      "Enter id: 50276\n",
-      "Enter quantity: 654654\n",
-      "\n",
-      "            Requested items: 654654\n",
-      "            Items in stock: 190\n",
-      "            \n",
-      "Do you want to buy remaining 190 items ? (Y or N): \n",
-      "Y\n",
-      "\n",
-      "        ***************************************************\n",
-      "        Bill No.\ttemp\n",
-      "        Item Id:\t50276\n",
-      "        Name:\tApple macbook air\n",
-      "        Price:\t2860\n",
-      "\n",
-      "        Requested Quantity:\t190\n",
-      "        ---------------------------------------------------\n",
-      "        Total Amount:\tRs. 543400\n",
-      "        ***************************************************\n",
-      "        \n",
-      "\n",
-      "Order successfull\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 2\n",
-      "\n",
-      "1. STock up existing item.\n",
-      "2. Add new Item.\n",
-      "\n",
-      "> 1\n",
-      "\n",
-      "Enter id: 50275\n",
-      "Enter Item name: \n",
-      "Enter price: \n",
-      "Enter current stock: 500\n",
-      "\n",
-      "Successfully stocked up\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 2\n",
-      "\n",
-      "1. STock up existing item.\n",
-      "2. Add new Item.\n",
-      "\n",
-      "> 2\n",
-      "\n",
-      "Enter id: 50999\n",
-      "Enter Item name: MI TV\n",
-      "Enter price: 36000\n",
-      "Enter current stock: 120\n",
-      "\n",
-      "Added new item\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "Inventory Management System\n",
-      "\n",
-      "1. Place order\n",
-      "2. stock up inventory\n",
-      "3. History\n",
-      "4. view inventory copy\n",
-      "\n",
-      "---------------------------------------------------\n",
-      "\n",
-      "> 3\n",
+      "No Item Exists\n",
       "\n",
       "---------------------------------------------------\n",
       "Inventory Management System\n",
@@ -327,7 +190,36 @@
       "\n",
       "> 4\n",
       "\n",
-      "Saved inventory copyC:\\Users\\DELL\\Documents\\InventorySystem\\Thu Sep  2 16-56-02 2021.json\n",
+      "Saved inventory copyC:\\Users\\DELL\\Documents\\InventorySystem\\Mon Sep  6 09-23-04 2021.json\n",
+      "\n",
+      "---------------------------------------------------\n",
+      "Inventory Management System\n",
+      "\n",
+      "1. Place order\n",
+      "2. stock up inventory\n",
+      "3. History\n",
+      "4. view inventory copy\n",
+      "\n",
+      "---------------------------------------------------\n",
+      "\n",
+      "> 1\n",
+      "\n",
+      "Enter id: 2076\n",
+      "Enter quantity: 10\n",
+      "\n",
+      "        ***************************************************\n",
+      "        Bill No.\ttemp\n",
+      "        Item Id:\t2076\n",
+      "        Name:\tSamsung S1 note\n",
+      "        Price:\t207\n",
+      "\n",
+      "        Requested Quantity:\t10\n",
+      "        ---------------------------------------------------\n",
+      "        Total Amount:\tRs. 2070\n",
+      "        ***************************************************\n",
+      "        \n",
+      "\n",
+      "Order successfull\n",
       "\n",
       "---------------------------------------------------\n",
       "Inventory Management System\n",
